Fix overflow issues in React tags box
- Properly truncate and ellipsize long tags
- Show scrollbar if tags go off the bottom of the pane

These both improve on the pre-React version, which didn't properly
truncate tags (at least in the current version, though I think it used
to) and scrolled the Add button off the top of the screen.

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -288,6 +288,7 @@
 {
 	width: 338px;
 	min-width: 338px;
+	overflow-y: hidden;
 }
 
 #zotero-layout-switcher
